--- a/src/main/resources/assets/hellmod/lang/en_us.json
+++ b/src/main/resources/assets/hellmod/lang/en_us.json
@@ -69,7 +69,8 @@
 	"item.hellmod.iridium_shovel": "Iridium Shovel",
 	
 	"item.hellmod.sandpaper": "Sandpaper",
-	
+	"item.hellmod.devil_horn": "Devil Horn",
+
 	"item.hellmod.scythe_handle": "Devil Handle",
 	"item.hellmod.scythe_blade": "Scythe Blade",
 	"item.hellmod.scythe": "Scythe",
